<resources>
    <string name="app_name">Calculator Test</string>
    <string name="action_settings">Settings</string>
    <string name="strPercent">%</string>
    <string name="strSubtract">-</string>
    <string name="strClr">C</string>
    <string name="strEquals">=</string>
    <string name="strDivide">\u00F7</string>
    <string name="strMultiply">\u00D7</string>
    <string name="strSqrt">\u221A</string>
    <string name="strPlus">+</string>
    <string name="strFive">5</string>
    <string name="strSix">6</string>
    <string name="strEight">8</string>
    <string name="strTwo">2</string>
    <string name="strFour">4</string>
    <string name="strZero">0</string>
    <string name="strNine">9</string>
    <string name="strDecimal">.</string>
    <string name="strThree">3</string>
    <string name="strOne">1</string>
    <string name="strPosNeg">\u00B1</string>
    <string name="strSeven">7</string>
</resources>
